10 Feb 2008: 0.5.5 Miek <miek@miek.nl>
 -- code cleanups and license change: GPL 3 --
 * Changed license to GPL 3
 * Print the octal mode (%b) with 4 digits to also allow
    for the correct transfer of sgid/suid/sticky bits.
 * Cleanup the perl code
 * Fixup the documentation


22 Jan 2008: 0.5.4 Miek <miek@miek.nl>
  -- bugfixes --
  * Fix longstanding bug on Solaris; don't rewind filedes although
    this worked on all other unices (linux/freebsd/macos).
  * Fix the .nobackup; file located in directories with this file
    in it shouldn't be backed up.


21 Jan 2008: 0.5.3 Miek <miek@miek.nl>
  -- cleanups --
  * Didn't use File::Copy::Recursive - so drop it
  * Small documentation updates 
  * Small fixes in the c source
  * Small build updates, makedist.sh, remove 'strip'


20 Sep 2007: 0.5.2 Miek <miek@miek.nl>
  -- cleanups --
  * Fix the debian pkg - don't create /etc/rdup by default
  * rdup-purge add File::Path perl module
  * rdup-simple: enable -a (thanks to: Mathieu Chappuis)
  * Go back to plain manpages - rst isn't worth the trouble


23 Jun 2007: 0.5.1 Miek <miek@miek.nl>
  -- bug fix and feature enhancements --
  * rdup: Fix race condition with growing files and remote backups
  * Gnumakefile.in: Dont create unneed directories (Sven Hartrump) 
  * Documentation: moved to restructed text as the source for docs
    (work in progress)
  * Added: rdup-purge: logarithmic purge script (idea from simple-backup)


17 May 2007: 0.5.0 Miek <miek@miek.nl>
  -- major new release - not backwards compatible -
  * All paths have changed /usr/bin is now used, no more sbin
  * All manual pages now fall in the section 1, not 8
  * No more use of /etc/rdup, only ~/.rdup
  * rdup-snap-link is the only script that optionally will
    check /etc/rdup
  * rdup: use ctime not the mtime
  * rdup: major rewrite of the core algorithm, it now uses
    a remove-list, new-list and posibly changed list - 
    only items that are on the changed list are ctime checked.